Fixed spacing. Adding blog pages next.

--- a/css/main.scss
+++ b/css/main.scss
@@ -147,7 +147,7 @@ body {
 // }
 
 .mid-section{
-	height: 1680px;
+	height: 1540px;
 
 	.about-me{
 
